--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: opbeans-flask:latest
     ports:
       - "127.0.0.1:${OPBEANS_PYTHON_PORT:-3000}:3000"
+    container_name: opbeans-flask
     logging:
       driver: 'json-file'
       options:
