--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,12 @@
-elastic-apm==5.3.2
-gunicorn==20.0.4
+elastic-apm==6.7.2
+gunicorn==20.1.0
 honcho==1.0.1
-psycopg2-binary==2.8.4
+psycopg2-binary==2.9.3
+python-dateutil==2.8.2
 pytz
 
 # flask
-flask==1.1.1
+flask==2.0.1
 blinker==1.4
-flask-sqlalchemy==2.4.1
-Flask-Migrate==2.5.2
+flask-sqlalchemy==2.5.1
+Flask-Migrate==3.1.0
